name:                librato
version:             0.0.0.0
synopsis:            Client library for Librato Metrics
-- description:         
license:             MIT
license-file:        LICENSE
author:              Michael Xavier
maintainer:          michael@michaelxavier.net
copyright:           Copyright (c) Michael Xavier 2013
category:            Network
build-type:          Simple
cabal-version:       >=1.8

library
  hs-source-dirs:      src
  exposed-modules:     Network.Librato
                       Network.Librato.Types
  other-modules:       Network.Librato.REST
  build-depends:       base           == 4.6.*,
                       blaze-builder  == 0.*,
                       aeson          == 0.*,
                       bytestring,
                       data-default,
                       http-types     == 0.*,
                       HsOpenSSL,
                       -- why?
                       httpmock,
                       io-streams     == 1.*,
                       lens           == 3.*,
                       classy-prelude == 0.*,
                       http-types,
                       http-streams   >= 0.5.0.2 && < 1.0,
                       transformers,
                       time           == 1.*,
                       unordered-containers

test-suite spec
  type:           exitcode-stdio-1.0
  main-is:        Spec.hs
  hs-source-dirs: test,src
  build-depends:       base               == 4.6.*,
                       blaze-builder      == 0.*,
                       aeson              == 0.*,
                       attoparsec         == 0.*,
                       bytestring,
                       data-default,
                       classy-prelude     == 0.*,
                       lens               == 3.*,
                       HsOpenSSL,
                       httpmock,
                       hspec              == 1.*,
                       hspec-expectations == 0.*,
                       http-types         == 0.*,
                       http-streams       >= 0.5.0.2 && < 1.0,
                       io-streams         == 1.*,
                       rematch            == 0.*,
                       string-qq,
                       transformers,
                       time               == 1.*,
                       unordered-containers
